Fix page header visible issues

--- a/styles/page-header.css
+++ b/styles/page-header.css
@@ -14,6 +14,12 @@ header {
     display: grid;
     align-items: center;
     grid-template-columns: 39% 22% 39%;
+    position: relative;
+}
+
+#help-and-contact {
+    position: relative;
+    top: -40%;
 }
 
 #help-and-contact > a {
@@ -58,7 +64,7 @@ header {
 
 #search-wrap {
     height: 32px;
-    width: 40%;
+    width: 240px;
     margin-right: 30px;
     border-bottom: solid 2px #000;
     display: grid;
@@ -293,7 +299,7 @@ header {
     header { margin-bottom: 10px; }
     #main-logo { width: 300px; }
     #header-search { width: 20px; }
-    #search-wrap { height: 27px; }
+    #search-wrap { height: 27px; width: 220px;}
     #search-input { height: 20px; font-size: 15px; }
     .header-ico { width: 32px; }
     .menu-option { width: 230px; }
@@ -301,7 +307,7 @@ header {
 
 @media only screen and (max-width: 1290px) {
     #help-and-contact > a { font-size: 10px; }
-    #search-wrap { margin-right: 16px; width: 46%; }
+    #search-wrap { margin-right: 16px; width: 200px; }
     #search-input { font-size: 14px;}
     #header-account { margin-right: 8px; }
     #header-cart { margin-right: 8%; }
